--- a/docs/random-beacon/token-grants.adoc
+++ b/docs/random-beacon/token-grants.adoc
@@ -19,6 +19,18 @@ The basic parameters of a token grant include:
 
 - the _revocability_ of the grant: Whether the grant is revocable (_True_) or non-revocable (_False_)
 
+===== Grant stakes
+
+When non-revocable grant tokens are staked, some relevant information is stored in a _grant stake_ entry. Each non-revocable grant maintains a list of its grant stakes.
+
+A grant stake entry includes:
+- the _staking contract_ used for the stake
+- _operator address_ of the stake
+- the _staked amount_ originally transferred to the staking contract. 
+Grant stakes can be uniquely addressed by the pair `(staking_contract, operator_address)`.
+
+A grant stake entry is erased when its corresponding stake has finished unstaking and its tokens are successfully returned to the owner.
+
 ===== Revocability
 
 Token grants may be _revocable_ or _non-revocable_. A non-revocable grant represents an irreversible transfer of tokens that, once initiated, cannot be stopped or altered. A revocable grant represents a conditional transfer, subject to continuing consent of the grant manager. The grant manager can revoke a revocable grant at any time. If a grant is revoked, all unvested tokens are returned to an address specified by the grant manager. Vested tokens remain in the grant and are available for the grantee to withdraw.
@@ -150,23 +162,6 @@ Grant tokens can be withdrawn once vested. Non-revocable grant tokens can also b
 ===== Vesting status
 
 All grant tokens are either _vested_ or _unvested_. The vested amount at some time represents the maximum number of tokens that may be withdrawn at that time. Grant tokens vest linearly over the grant duration; when half of the grant duration has elapsed 50% of the grant tokens will have vested, and so on. However, until the vesting cliff is reached, the number of vested tokens is fixed at zero.
-
-===== Grant stakes
-
-When non-revocable grant tokens are staked,
-some relevant information is stored in a _grant stake_ entry.
-Each non-revocable grant maintains a list of its grant stakes.
-
-A grant stake entry includes
-the _staking contract_ used for the stake,
-the _operator address_ of the stake,
-and the _staked amount_ originally transferred to the staking contract.
-Grant stakes can be uniquely addressed by the pair
-`(staking_contract, operator_address)`.
-
-A grant stake entry is erased
-when its corresponding stake has finished unstaking
-and its tokens are successfully returned to the owner.
 
 ==== Grant records
 
